--- a/notes/suruga-ya-intl.htm
+++ b/notes/suruga-ya-intl.htm
@@ -43,8 +43,8 @@
 <em>Do <strong>NOT</strong> buy from suruya-ga.com, order from suruga-ya.jp with a forwarding service of your choice.</em></p>
 </blockquote>
 <h2>Background<span id="Background"></span></h2>
-<p>Established in 1948<sup class="footnote-ref"><a href="#fn1" id="fnref1">1</a></sup>, Suruga-ya (駿河屋) is a Japanese used goods retailer specializing in physical media, electronics and collectibles in a similar vein to Book-Off, <a href="https://order.mandarake.co.jp/order/?lang=en">Mandarake</a> and <a href="https://www.amiami.com/eng/search/list/?s_st_condition_flg=1">AmiAmi <em>(pre-owned)</em></a>, they operate physical shops all throughout Japan and also offer domestic mail order through <a href="https://suruga-ya.jp">suruga-ya.jp</a>, and most recently <a href="https://suruya-ga.com">suruga-ya.com</a> for international customers outside of Japan.
-Previously, you needed to employ the use of a proxy buying<sup class="footnote-ref"><a href="#fn2" id="fnref2">2</a></sup> or forwarding service<sup class="footnote-ref"><a href="#fn3" id="fnref3">3</a></sup> to get your Suruga-ya orders out of the country.</p>
+<p>Established in 1948<sup class="footnote-ref"><a href="#fn-3" id="fnref-3" data-footnote-ref="data-footnote-ref">1</a></sup>, Suruga-ya (駿河屋) is a Japanese used goods retailer specializing in physical media, electronics and collectibles in a similar vein to Book-Off, <a href="https://order.mandarake.co.jp/order/?lang=en">Mandarake</a> and <a href="https://www.amiami.com/eng/search/list/?s_st_condition_flg=1">AmiAmi <em>(pre-owned)</em></a>, they operate physical shops all throughout Japan and also offer domestic mail order through <a href="https://suruga-ya.jp">suruga-ya.jp</a>, and most recently <a href="https://suruya-ga.com">suruga-ya.com</a> for international customers outside of Japan.
+Previously, you needed to employ the use of a proxy buying<sup class="footnote-ref"><a href="#fn-1" id="fnref-1" data-footnote-ref="data-footnote-ref">2</a></sup> or forwarding service<sup class="footnote-ref"><a href="#fn-2" id="fnref-2" data-footnote-ref="data-footnote-ref">3</a></sup> to get your Suruga-ya orders out of the country.</p>
 <h1>Thoughts<span id="Thoughts"></span></h1>
 <p>Most other places I buy Japanese stuff have been around long enough that they are well reviewed elsewhere, Suruga-ya’s global storefront is not.</p>
 <p>Their international selection is but a small fraction of the domestic site’s and not worth your time.
@@ -87,36 +87,36 @@ Well they didn’t change a thing for international shipments, in the rest of th
 <p>Except this one time, Suruya-ga paid for that, and they paid an estimated ¥30,000-45,000 to 3-day DHL ship me a 40x30x18cm, 1kg box containing only a interview and art asset memorabilia book for the <a href="https://en.wikipedia.org/wiki/Hatsune_Miku:_Project_DIVA">Project Diva</a> series of rhythm games and a BD of Hatsune Miku’s first ever <a href="https://www.youtube.com/watch?v=Va9Zt9HY-ik" title="Mikunopolis in Los Angeles (2011)">live performance</a> outside of Japan, her U.S. and L.A. <a href="https://www.youtube.com/watch?v=e5mefdcnMsU" title="FOX 11 local news coverage of Mikunopolis (2011)">debut from 2011</a>!</p>
 <p><img src="/notes/assets/suruga-ya-order.jpg" alt="some miku items" /></p>
 <p>Their <em>“padding”</em> methods are optimized to save weight, they use stretch film wrapped around a base piece of cardboard sitting at the bottom of the box, they won’t jostle around in transit, but will absolutely not protect anything from the box being crushed, I still won’t complain here, the shipping was literally free. This is probably why they don’t do surface mail.</p>
-<p>One thing to note, in spite of everything, their used conditions tend to be very good, hovering around AmiAmi pre-owned<sup class="footnote-ref"><a href="#fn4" id="fnref4">4</a></sup> grade B, they cite that used items will not be sold if they if <a href="https://www.suruga-ya.com/en/product-sales">they cannot fulfill their original purpose</a>, and if there is clear damage or missing parts, the listing will say so explicitly and include pictures of the damage, if they make a note, it’s equivalent to a spicy grade C, the DIY special.</p>
+<p>One thing to note, in spite of everything, their used conditions tend to be very good, hovering around AmiAmi pre-owned<sup class="footnote-ref"><a href="#fn-4" id="fnref-4" data-footnote-ref="data-footnote-ref">4</a></sup> grade B, they cite that used items will not be sold if they if <a href="https://www.suruga-ya.com/en/product-sales">they cannot fulfill their original purpose</a>, and if there is clear damage or missing parts, the listing will say so explicitly and include pictures of the damage, if they make a note, it’s equivalent to a spicy grade C, the DIY special.</p>
 <p>They also use this as an excuse to never actually appraise the quality of items or respond to any messages asking about the quality of items, you just have to trust that you’re not going to receive a shattered CD jewel case or something, keep your expectations low and you will never be disappointed!</p>
 <h1>In conclusion<span id="In-conclusion"></span></h1>
 <p>I haven’t actually checked as to whether their return or exchange policy is any good, not that it matters, I imagine it would not be at all cost-effective to ship stuff back at the prices you pay here.
 if you don’t enjoy the thrills and suspense of buying pre-owned goods sight unseen, there are other places to buy Japanese stuff!</p>
 <p>So there’s really no lesson to be learned here, I’m greedy, Suruga-ya’s global storefront is run by assholes, I’m glad I cost them a bunch of money for no reason, and paradoxically, they’ve made a customer for life.</p>
 <p>I’ll be buying from them again real soon, just not from the global storefront!</p>
-<section class="footnotes">
+<section class="footnotes" data-footnotes="data-footnotes">
 <ol>
-<li id="fn1">
-<p>Were they really operating as a retailer of used books, music and anime figures in 1948? idk, probably. <a href="#fnref1" class="footnote-backref">↩</a></p>
+<li id="fn-3">
+<p>Were they really operating as a retailer of used books, music and anime figures in 1948? idk, probably. <a href="#fnref-3" class="footnote-backref" data-footnote-backref="data-footnote-backref" data-footnote-backref-idx="1" aria-label="Back to reference 1">↩</a></p>
 </li>
-<li id="fn2">
+<li id="fn-1">
 <p><strong>Proxy buying</strong> —</p>
 <p>A full service purchasing method that buys your merchandise on your behalf and then bills you for the final order amount plus fees, and shipping costs to your country.</p>
-<p>These get expensive quickly as they charge per item and are only recommended if using auction sites where you intend to snipe auctions and are too stupid to do it yourself. <a href="#fnref2" class="footnote-backref">↩</a></p>
+<p>These get expensive quickly as they charge per item and are only recommended if using auction sites where you intend to snipe auctions and are too stupid to do it yourself. <a href="#fnref-1" class="footnote-backref" data-footnote-backref="data-footnote-backref" data-footnote-backref-idx="2" aria-label="Back to reference 2">↩</a></p>
 </li>
-<li id="fn3">
+<li id="fn-2">
 <p><strong>Forwarding service</strong> —</p>
 <p>A much simpler service that charges a flat fee to redirect one or more packages you ordered yourself, they give you a domestic address to ship to, optionally repack your orders into one shipment to save on shipping costs and then bill you for shipping to your country.</p>
 <p>I recommend these because you can ship a quite large volume of things via surface mail (ocean shipping) for far less than air shipping methods.
 A shipment that would cost ¥70,000 via air shipping methods can cost under ¥14,000 via ocean shipping, an 80% savings!</p>
 <p>Is it worth the 1-2mo shipping times to Oceania, 3-4mo to the Americas, or 5-6mo to Europe?
-If you’re addicted to instant gratification and suffer from burnt-out dopamine receptors, then absolutely not, but that money could be used on more important things, like more miku figures and not shipping, that shit adds up quick. <a href="#fnref3" class="footnote-backref">↩</a></p>
+If you’re addicted to instant gratification and suffer from burnt-out dopamine receptors, then absolutely not, but that money could be used on more important things, like more miku figures and not shipping, that shit adds up quick. <a href="#fnref-2" class="footnote-backref" data-footnote-backref="data-footnote-backref" data-footnote-backref-idx="3" aria-label="Back to reference 3">↩</a></p>
 </li>
-<li id="fn4">
+<li id="fn-4">
 <p><strong>AmiAmi pre-owned grades</strong> —</p>
 <p><strong>A</strong>: New in box, has never been opened, or appears to have never been opened, also never inspected for manufacturing defects, buyer beware.</p>
 <p><strong>B</strong>: Has been opened and inspected, and generally enjoyed or put on display, not damaged and includes all parts, may have dust or dirt.</p>
-<p><strong>C</strong>: Has missing parts or actual conspicuous damage, indicated by the listing, you know what you’re getting into. <a href="#fnref4" class="footnote-backref">↩</a></p>
+<p><strong>C</strong>: Has missing parts or actual conspicuous damage, indicated by the listing, you know what you’re getting into. <a href="#fnref-4" class="footnote-backref" data-footnote-backref="data-footnote-backref" data-footnote-backref-idx="4" aria-label="Back to reference 4">↩</a></p>
 </li>
 </ol>
 </section>
