--- a/notes/why-copyleft.htm
+++ b/notes/why-copyleft.htm
@@ -86,7 +86,7 @@ Permissive licenses that require only attribution are as good as public domain w
 Re-licensing permissive works allows you to subscribe to the <em><strong>“fuck you, got mine™”</strong></em> school of creative freedom—the legal equivalent of pulling up the ladder up behind you.</p>
 <div style="border-right: 2px;" class="aside right">
 <p>By far, the most prominent and egregious example is The Walt Disney Company,
-who, throughout the 20th century, made billions through the plundering and retelling of <a href="https://derekkhanna.medium.com/disney-works-based-on-public-domain-eb49ac34c3da" title="Disney works based on the public domain">public domain stories and characters</a>. Then they paid it forward by successfully lobbying to extend US copyright protections through the <a href="https://en.wikipedia.org/wiki/Copyright_Term_Extension_Act" title="Sonny Bono Copyright Term Extension Act of 1998">Sonny Bono Act of 1998</a>, pushing enforceable copyright terms well past the practical limits of human lifespan<sup class="footnote-ref"><a href="#fn1" id="fnref1">1</a></sup>, all so no one in this century or the next could ever do the same with Disney’s own cultural works.</p>
+who, throughout the 20th century, made billions through the plundering and retelling of <a href="https://derekkhanna.medium.com/disney-works-based-on-public-domain-eb49ac34c3da" title="Disney works based on the public domain">public domain stories and characters</a>. Then they paid it forward by successfully lobbying to extend US copyright protections through the <a href="https://en.wikipedia.org/wiki/Copyright_Term_Extension_Act" title="Sonny Bono Copyright Term Extension Act of 1998">Sonny Bono Act of 1998</a>, pushing enforceable copyright terms well past the practical limits of human lifespan<sup class="footnote-ref"><a href="#fn-forever" id="fnref-forever" data-footnote-ref="data-footnote-ref">1</a></sup>, all so no one in this century or the next could ever do the same with Disney’s own cultural works.</p>
 </div>
 <p>Copyleft licenses give you the legal framework to prevent this from happening to you or any future users of your works.</p>
 <p>When you remove all legal barriers for re-licensing of creative works, <a href="https://www.cs.vu.nl/~ast/intel/" title="Permissively licensed OS is used by Intel in the most prolific spyware implementation in the world.">people will do so</a>, and some might feel so emboldened they won’t even attribute you.</p>
@@ -100,12 +100,12 @@ to use your copyrighted work as they wish in exchange for royalties, money, gain
 <p>Your copyright is still legally yours, some rights reserved, and will continue to be for the rest of your life plus 70 years.
 A copyleft license only give <a href="https://www.gnu.org/philosophy/free-sw.en.html#four-freedoms" title="FSF definition of free software">selected rights</a> to the general public, with the expectations that those rights stay intact for all future users.
 In effect, you can <em>“sell out”</em> without truly <em>selling out</em> your or your user’s creative freedoms.</p>
-<section class="footnotes">
+<section class="footnotes" data-footnotes="data-footnotes">
 <ol>
-<li id="fn1">
+<li id="fn-forever">
 <p>As it turned out, extending copyright terms to “forever” wasn’t considered constitutional,
 and “forever minus one day” would be legally difficult to define, so they settled for 120 years for corporate authorship.</p>
-<p>— <a href="https://www.congress.gov/congressional-record/volume-144/issue-139/house-section/article/H9946-1#:~:text=Actually%2C%20Sonny%20wanted,that%20next%20Congress.">October 7, 1998, Congressional Record Vol. 144, No. 139, pp. H9952</a> <a href="#fnref1" class="footnote-backref">↩</a></p>
+<p>— <a href="https://www.congress.gov/congressional-record/volume-144/issue-139/house-section/article/H9946-1#:~:text=Actually%2C%20Sonny%20wanted,that%20next%20Congress.">October 7, 1998, Congressional Record Vol. 144, No. 139, pp. H9952</a> <a href="#fnref-forever" class="footnote-backref" data-footnote-backref="data-footnote-backref" data-footnote-backref-idx="1" aria-label="Back to reference 1">↩</a></p>
 </li>
 </ol>
 </section>
