notes/figures: suruga-ya.com wins again!

--- a/notes/figures.htm
+++ b/notes/figures.htm
@@ -36,9 +36,9 @@
 <div class="content">
 <!--kagami v0.6.5 — static microblog processor-->
 <!-- started 2022/4/21 -->
-<!-- updated 2023/9/7 -->
+<!-- updated 2023/9/10 -->
 <h1>My Collection of Assorted Figurines (oops all miku!)<span id="My-Collection-of-Assorted-Figurines-oops-all-miku"></span></h1>
-<p>Last updated 🌓 Thu, Sep 7th, 2023</p>
+<p>Last updated 🌔 Sun, Sep 10th, 2023</p>
 <p>Here’s my <del>small, yet</del> growing IRL collection of figurines and other assorted cute things that I’m slowly running out of room for.
 Most of my collection consists of inexpensive <em>“prize figures”</em> of the type you could win from a Japanese <a href="https://www.youtube.com/watch?v=0Nh-k8OXhCo">“skill” claw machine</a>, these are more modest and less ambitious in detail, character pose, and/or paintwork quality than much higher priced <em>“scale figures,”</em> though these days, it’s not uncommon to find prizes that rival more far more expensive figures in one or more of these categories.</p>
 <p>I live an ocean away from the easternmost archipelago where they speak the anime girl language and physical arcades with <em>UFO catchers</em> dot the landscape, so I end up buying endless variations of <a href="https://www.youtube.com/watch?v=f91sM4rI76w&amp;hl=en">my electric angel</a> anywhere I spot them in the wild.
@@ -149,6 +149,12 @@ var figs = [
 	 * MFC ids prepended with x are knockoffs
 	 */
 
+	[ 'p186', '94494', 'good smile miku nendoroid #33 (2008)' ],
+	[ 'p1656', 'ca554', 'good smile hachune miku nendoroid #042 (2008)' ],
+	[ 'p1009', '633df', 'good smile kagamine len nendoroid #40' ],
+	[ 'p1008', 'cbcc1', 'good smile kagamine rin nendoroid #39' ],
+	[ 'p117503', 'e371a', 'good smile mikudayo nendoroid #299' ],
+
 	[ 'p23566', '8126f', 'volks moekore plus #03.9 miku encore 1/6 scale' ],
 	[ 'p331720', '1ff7c', 'good smile project diva ha2ne miku co-de' ],
 	[ 'p22229', 'e58da', 'sega hatsune miku PM figure (2010)' ],
@@ -164,7 +170,6 @@ var figs = [
 
 /* from cancelled suruga-ya order 2023/7/26
 	[ 'p104300', '65180', 'good smile sakura miku nendoroid #274' ],
-	[ 'p117503', 'e371a', 'good smile mikudayo nendoroid #299' ],
 	[ 'p1251028', '79b76', 'bandai q posket sakura miku type a' ],
 */
 	[ '861021', 'c00c8', 'sega miku preciality special nuigurumi (fuwafuwa mega jumbo) plush' ],
